# tensor

./: .bandit.yml  .editorconfig  .pylintrc  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg
src/: cases.py  wait.py
src/elements/: base_element.py  utils.py
src/pages/: about_page.py  base_page.py  contacts_page.py  cookie_page.py  region_pop_up_page.py  sbis_page.py  tensor_page.py
tests/: test_1.py  test_2.py  test_3.py
